--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ muapp/__pycache__/
 muapp/migrations/__pycache__/
 muapp/__pycache__/urls.cpython-310.pyc
 muapp/__pycache__/views.cpython-310.pyc
+db.sqlite3
