png파일도 누끼 따게 수정 및 디자인 수정

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ muapp/__pycache__/
 muapp/migrations/__pycache__/
 muapp/__pycache__/urls.cpython-310.pyc
 muapp/__pycache__/views.cpython-310.pyc
+
+checkpoint/sam_vit_h_4b8939.pth
